COMMON_INC = -I../common/include
COMMON_LIB = 

COMMON_INCLUDES = ../common/includes/utils.h

bin_PROGRAMS = socket-ops

socket_ops_SOURCES = socket-ops.c socket-ops-std.c socket-ops.h $(COMMON_INCLUDES)
socket_ops_CFLAGS = $(COMMON_INC) -W -Wall -Werror -g
socket_ops_CPPFLAGS = $(COMMON_INC)
socket_ops_LDFLAGS =
socket_ops_LDADD =

